<resources>
    <string name="app_name">TestTask2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First name -</string>
    <string name="last_name">Last name -</string>
    <string name="age">Age -</string>
    <string name="phone">Phone -</string>
    <string name="email">Email -</string>
</resources>
